# heiFIP

./: .bumpversion.cfg  .gitignore  CITATION.cff  CMakeLists.txt  README.md  SECURITY.md  citation.cff  example.py  extractor.cpp  heifip_test.py  main.cpp  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix  split.py  tests.py
.github/workflows/: build_test_aarch64.yml  build_test_armhf.yml  build_test_linux.yml  build_test_macos.yml  build_test_windows.yml  build_wheel_publish.yml  python-app.yml  release.yml
assets/: PcapHeaders.h  heiFIBPacketImage.cpp  packetHelper.cpp
assets/libcrafter/: Makefile  Makefile.in  config.h  config.status  configure  crafter.pc  libcrafter.la  libtool
assets/libcrafter/.libs/: libcrafter.0.dylib  libcrafter.dylib  libcrafter.la  libcrafter.lai
assets/libcrafter/crafter/: InitCrafter.lo  Layer.lo  Packet.lo  PacketDecoder.lo  Payload.lo
assets/libcrafter/crafter/.deps/: InitCrafter.Plo  Layer.Plo  Packet.Plo  PacketDecoder.Plo  Payload.Plo
assets/libcrafter/crafter/Fields/: FieldContainer.lo  FieldInfo.lo  IPAddress.lo  IPv6Address.lo  MACAddress.lo  NumericFields.lo
assets/libcrafter/crafter/Fields/.deps/: FieldContainer.Plo  FieldInfo.Plo  IPAddress.Plo  IPv6Address.Plo  MACAddress.Plo  NumericFields.Plo
assets/libcrafter/crafter/Protocols/: ARPConstructor.lo  ARPCraft.lo  DHCPConstructor.lo  DHCPCraft.lo  DHCPOptions.lo  DNSAnswer.lo  DNSConstructor.lo  DNSCraft.lo  DNSQuery.lo  Dot1QConstructor.lo  Dot1QCraft.lo  EthernetConstructor.lo  EthernetCraft.lo  ICMPConstructor.lo  ICMPCraft.lo  ICMPExtensionConstructor.lo  ICMPExtensionCraft.lo  ICMPExtensionMPLSConstructor.lo  ICMPExtensionMPLSCraft.lo  ICMPExtensionObjectConstructor.lo  ICMPExtensionObjectCraft.lo  ICMPLayer.lo  ICMPv6Constructor.lo  ICMPv6Craft.lo  ICMPv6LayerConstructor.lo  ICMPv6LayerCraft.lo  IPConstructor.lo  IPCraft.lo  IPLayer.lo  IPOptionConstructor.lo  IPOptionCraft.lo  IPOptionLayer.lo  IPOptionPadConstructor.lo  IPOptionPadCraft.lo  IPOptionPointerConstructor.lo  IPOptionPointerCraft.lo  IPOptionTracerouteConstructor.lo  IPOptionTracerouteCraft.lo  IPv6Constructor.lo  IPv6Craft.cpp  (+23 more)
assets/libcrafter/crafter/Protocols/.deps/: ARPConstructor.Plo  ARPCraft.Plo  DHCPConstructor.Plo  DHCPCraft.Plo  DHCPOptions.Plo  DNSAnswer.Plo  DNSConstructor.Plo  DNSCraft.Plo  DNSQuery.Plo  Dot1QConstructor.Plo  Dot1QCraft.Plo  EthernetConstructor.Plo  EthernetCraft.Plo  ICMPConstructor.Plo  ICMPCraft.Plo  ICMPExtensionConstructor.Plo  ICMPExtensionCraft.Plo  ICMPExtensionMPLSConstructor.Plo  ICMPExtensionMPLSCraft.Plo  ICMPExtensionObjectConstructor.Plo  ICMPExtensionObjectCraft.Plo  ICMPLayer.Plo  ICMPv6Constructor.Plo  ICMPv6Craft.Plo  ICMPv6LayerConstructor.Plo  ICMPv6LayerCraft.Plo  IPConstructor.Plo  IPCraft.Plo  IPLayer.Plo  IPOptionConstructor.Plo  IPOptionCraft.Plo  IPOptionLayer.Plo  IPOptionPadConstructor.Plo  IPOptionPadCraft.Plo  IPOptionPointerConstructor.Plo  IPOptionPointerCraft.Plo  IPOptionTracerouteConstructor.Plo  IPOptionTracerouteCraft.Plo  IPv6Constructor.Plo  IPv6Craft.Plo  (+22 more)
assets/libcrafter/crafter/Utils/: ARPPing.lo  ARPSpoofing.lo  ARPSpoofingReply.lo  ARPSpoofingRequest.lo  BitHandling.h  BitHandling.lo  CrafterUtils.lo  IPResolver.lo  IPv4Parse.lo  PacketContainer.lo  PrintMessage.lo  RawSocket.lo  Sniffer.lo  TCPConnection.lo
assets/libcrafter/crafter/Utils/.deps/: ARPPing.Plo  ARPSpoofing.Plo  ARPSpoofingReply.Plo  ARPSpoofingRequest.Plo  BitHandling.Plo  CrafterUtils.Plo  IPResolver.Plo  IPv4Parse.Plo  PacketContainer.Plo  PrintMessage.Plo  RawSocket.Plo  Sniffer.Plo  TCPConnection.Plo
cli/: FlowImageProcessor.py  __init__.py
examples/: Pcap2Session.ps1  ProcessSession.ps1
fip/: __init__.py  custom_header.py  image.py  main.py  packets.py  ssh.py  version.py
heiFIP/: CMakeLists.txt  cli.cpp  extractor.cpp  extractor.hpp  logging.hpp  main.cpp  runner.cpp  runner.hpp  vcpkg.json
heiFIP/assets/: PcapHeaders.h  heiFIBPacketImage.cpp  heiFIPPacketImage.cpp  heiFIPPacketImage.hpp  packetHelper.cpp
heiFIP/cmake/: FindOpenSSL.cmake  FindPcapPlusPlus.cmake
heiFIP/images/: NetworkTrafficImage.hpp  flow.cpp  flow.hpp  flow_tiled_auto.cpp  flow_tiled_auto.hpp  flow_tiled_fixed.cpp  flow_tiled_fixed.hpp  markov_chain.cpp  markov_chain.hpp  tile_utils.hpp
heiFIP/layers/: dns.cpp  dns.hpp  http.cpp  http.hpp  init.cpp  init.hpp  ip.cpp  ip.hpp  packet.cpp  packet.hpp  ssh.cpp  ssh.hpp  transport.cpp  transport.hpp
heiFIP/plugins/: header.cpp
heiFIP/tests/: test_cli.cpp  test_extractor.cpp  test_flow_image.cpp  test_layers.cpp  test_markov.cpp  test_packet_image.cpp  test_tile_utils.cpp  test_tiled_images.cpp
heifip/: __init__.py  cli.py  extractor.py  main.py  splitter.py
heifip/exceptions/: __init__.py
heifip/extractors/: __init__.py
heifip/images/: __init__.py  flow.py  flow_tiled_auto.py  flow_tiled_fixed.py  markovchain.py  packet.py
heifip/layers/: __init__.py  dns.py  http.py  ip.py  packet.py  ssh.py  tcp.py  transport.py  udp.py
heifip/plugins/: __init__.py  header.py
heifip/protocols/: __init__.py  ssh.py
images/: NetworkTrafficImage.hpp  flow.cpp  flow_tiled_auto.cpp  flow_tiled_fixed.cpp  markov_chain.cpp
layers/: dns.cpp  http.cpp  init.cpp  ip.cpp  packet.cpp  ssh.cpp  transport.cpp
plugins/: header.cpp
tests/pcaps/: README  ubuntu_baseline_https.pcap
