[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heifip"
version = "0.0.1"
authors = [
  { name="Stefan Machmeier", email="stefan.machmeier@uni-heidelberg.de" },
]
description = "A tool to convert network traffic into images for ML use cases "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]

[project.scripts]
fip = "cli.FlowImageProcessor:cli"

[project.urls]
"Homepage" = "https://github.com/stefanDeveloper/heiFIP"
"Bug Tracker" = "https://github.com/stefanDeveloper/heiFIP/issues"